# cli-parity-validator

./: README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
examples/: demo.py
src/cli_parity_validator/: __init__.py  __main__.py  validator.py
tests/: test_validator.py
