[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-parity-validator"
version = "1.0.0"
description = "Validate that multiple AI CLI tools expose consistent, expected toolsets — catch drift before it breaks pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.scripts]
cli-parity = "cli_parity_validator.validator:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
